--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-firebase/auth": "^0.2.10",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
+    "firebase": "^8.6.1",
+    "firebase-admin": "^9.8.0",
+    "mapbox-gl": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-mapbox-gl": "^5.1.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
